--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ryze-digital/accordion",
   "description": "Enhances the <details> tag with animations and events ",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "version": "1.0.0-beta.0",
   "author": "RYZE Digital GmbH <kontakt@ryze-digital.de> (https://www.ryze-digital.de/)",
   "main": "index.js",
